--- a/src/app/log-explorer/log-explorer.component.html
+++ b/src/app/log-explorer/log-explorer.component.html
@@ -21,26 +21,19 @@
 <div class="table-responsive">
   <table id="contentTable" class="table table-striped table-sm table-hover">
     <colgroup>
-      <col span="1" style="width: 15%;">
+      <col span="1" style="width: 2%;">
+      <col span="1" style="width: 13%;">
       <col span="1" style="width: 85%;">
     </colgroup>
     <thead>
     <tr>
+      <th></th>
       <th>Time</th>
       <th>Content</th>
     </tr>
     </thead>
     <tbody class="explorer-table-content" *ngIf="explorerData">
-      <tr *ngFor="let row of explorerData.data">
-        <td>{{row[0]}}</td>
-        <td>
-          <div class="force-height">
-            <div *ngFor="let c of row; let idx = index;" [attr.data-index]="idx" style="display: inline-block">
-              <a href="#" class="badge badge-pill badge-secondary" (click)="addFilter(explorerData.meta[idx].name, c)">{{explorerData.meta[idx].name}}:</a> {{c}}&nbsp;
-            </div>
-          </div>
-        </td>
-      </tr>
+      <tr log-row *ngFor="let row of explorerData.data" [meta]="explorerData.meta" [row]="row"></tr>
     </tbody>
   </table>
 </div>
