--- a/src/app/log-explorer/log-row/log-row.component.scss
+++ b/src/app/log-explorer/log-row/log-row.component.scss
@@ -5,6 +5,11 @@
   overflow: hidden;
 }
 
+.full-height {
+  display: inline-block;
+  word-break: break-word;
+}
+
 .expand-btn {
   cursor: pointer;
 }
