--- a/src/app/topnav/topnav.component.html
+++ b/src/app/topnav/topnav.component.html
@@ -1,4 +1,4 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="#">LogFish <span class="badge badge-warning">Beta</span></a>
-  <span class="ml-auto text-white">ver. {{version}}</span>
+  <span class="ml-auto text-white">version: {{version}}</span>
 </nav>
