--- a/src/app/log-explorer/stats-bar/stats-bar.component.html
+++ b/src/app/log-explorer/stats-bar/stats-bar.component.html
@@ -1,3 +1,3 @@
-<div class="mb-2 text-right">
-  <span><b>{{stats.rows}}</b> hits in <b>{{stats.statistics.elapsed * 1000 | number : '1.2-2'}}ms</b> ({{stats.statistics.rows_read}} rows read)</span>
+<div class="mb-2 text-right" *ngIf="stats">
+  <span><b>{{hits()}}</b> hits in <b>{{stats.statistics.elapsed * 1000 | number : '1.2-2'}}ms</b> ({{stats.statistics.rows_read}} rows scanned)</span>
 </div>
