--- a/src/app/log-explorer/log-explorer.component.html
+++ b/src/app/log-explorer/log-explorer.component.html
@@ -2,7 +2,7 @@
   <app-filters-bar></app-filters-bar>
 
   <div class="btn-toolbar mb-2 mb-md-0 ml-auto">
-    <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle">
+    <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle mr-2">
       <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
            fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
            stroke-linejoin="round" class="feather feather-calendar">
@@ -12,6 +12,14 @@
         <line x1="3" y1="10" x2="21" y2="10"></line>
       </svg>
       This week
+    </button>
+
+    <button type="button" class="btn btn-sm btn-outline-secondary" (click)="refetchData()">
+      <svg width="24" height="24" viewBox="0 0 16 16" class="bi bi-arrow-repeat" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+        <path d="M11.534 7h3.932a.25.25 0 0 1 .192.41l-1.966 2.36a.25.25 0 0 1-.384 0l-1.966-2.36a.25.25 0 0 1 .192-.41zm-11 2h3.932a.25.25 0 0 0 .192-.41L2.692 6.23a.25.25 0 0 0-.384 0L.342 8.59A.25.25 0 0 0 .534 9z"/>
+        <path fill-rule="evenodd" d="M8 3c-1.552 0-2.94.707-3.857 1.818a.5.5 0 1 1-.771-.636A6.002 6.002 0 0 1 13.917 7H12.9A5.002 5.002 0 0 0 8 3zM3.1 9a5.002 5.002 0 0 0 8.757 2.182.5.5 0 1 1 .771.636A6.002 6.002 0 0 1 2.083 9H3.1z"/>
+      </svg>
+      Refresh
     </button>
   </div>
 </div>
