fix(filters-bar): wrap long filters row

--- a/src/app/log-explorer/filters-bar/filters-bar.component.html
+++ b/src/app/log-explorer/filters-bar/filters-bar.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex">
+<div class="d-flex flex-wrap">
   <ng-template [ngIf]="filters.size == 0">
     <span>No filters selected</span>
   </ng-template>
