--- a/src/app/log-explorer/log-explorer.component.html
+++ b/src/app/log-explorer/log-explorer.component.html
@@ -2,17 +2,12 @@
   <app-filters-bar></app-filters-bar>
 
   <div class="btn-toolbar mb-2 mb-md-0 ml-auto">
-    <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle mr-2">
-      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-           fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-           stroke-linejoin="round" class="feather feather-calendar">
-        <rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect>
-        <line x1="16" y1="2" x2="16" y2="6"></line>
-        <line x1="8" y1="2" x2="8" y2="6"></line>
-        <line x1="3" y1="10" x2="21" y2="10"></line>
-      </svg>
-      This week
-    </button>
+    <input [owlDateTime]="dateTimeRange" [selectMode]="'range'"
+           [owlDateTimeTrigger]="dateTimeRange" (dateTimeChange)="updateTimeRange(dateTimeRange)"
+           *ngIf="hasTimestampField()"
+           placeholder="Date time range" class="mr-2">
+
+    <owl-date-time #dateTimeRange></owl-date-time>
 
     <button type="button" class="btn btn-sm btn-outline-secondary" (click)="refetchData()">
       <svg width="24" height="24" viewBox="0 0 16 16" class="bi bi-arrow-repeat" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
