--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,5 @@
 
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
+
+@import "~ng-pick-datetime/assets/style/picker.min.css";
